# Option-Manager

./: README.md  option_manager.py  pyproject.toml
option_manager/: options.py  rule_set.py
tests/: test_options.py  test_rule_set.py
